refactor: Finish initialization of Angular2 console with home and API management page

--- a/admin/console/app/components/apis/apis.html
+++ b/admin/console/app/components/apis/apis.html
@@ -15,4 +15,18 @@
     limitations under the License.
 
 -->
-<h1>Gravitee-io</h1>
+
+<h1>Gestion des APIs</h1>
+
+<table>
+    <tr>
+        <th>Nom</th>
+        <th>URI public</th>
+        <th>URI cible</th>
+    </tr>
+    <tr *ng-for="#api of apis">
+        <td>{{api.name}}</td>
+        <td>{{api.public}}</td>
+        <td>{{api.target}}</td>
+    </tr>
+</table>
