feat(admin): Allows to start/stop an API

--- a/admin/console/app/components/apis/apis.html
+++ b/admin/console/app/components/apis/apis.html
@@ -23,10 +23,14 @@
         <th>Nom</th>
         <th>URI public</th>
         <th>URI cible</th>
+        <th>Statut</th>
     </tr>
     <tr *ng-for="#api of apis">
         <td>{{api.name}}</td>
         <td>{{api.public}}</td>
         <td>{{api.target}}</td>
+        <td>{{api.enabled ? 'Actif':'Inactif'}}</td>
+        <td *ng-if="!api.enabled"><button (click)="start(api.name)">Démarrer</button></td>
+        <td *ng-if="api.enabled"><button (click)="stop(api.name)">Arrêter</button></td>
     </tr>
 </table>
