refactor: Handle logout

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -21,11 +21,12 @@
     <img class="gravitee-navbar-logo" src="assets/images/logo_gravitee.png" alt="Gravitee">Gravitee Administration Console
   </md-button>
 
-  <section flex layout="row" layout-align="left center">
-    <md-button href="#/" class="md-raised">Home</md-button>
+  <section ng-if="authenticated" flex layout="row" layout-align="left center">
     <md-button href="#/apis" class="md-raised">APIs Management</md-button>
     <md-button href="#/users" class="md-raised">Users Management</md-button>
 		<md-button href="#/documentation" class="md-raised">Documentation</md-button>
   </section>
+
+  <md-button ng-if="authenticated" type="button" ng-click="navbarCtrl.logout()">Log out</md-button>
 
 </md-toolbar>
