--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -26,7 +26,7 @@
 
         <md-input-container class="md-icon-float">
             <label>Password</label>
-            <input ng-model="loginCtrl.user.password" type="text" ng-required="true">
+            <input ng-model="loginCtrl.user.password" type="password" ng-required="true">
         </md-input-container>
 
         <md-button type="submit" class="md-primary" ng-disabled="formUser.$invalid">
