--- a/src/app/api/api.dialog.html
+++ b/src/app/api/api.dialog.html
@@ -16,6 +16,7 @@
 
 -->
   <md-dialog aria-label="Creation of a new API">
+    <md-content class="md-padding">
     <form name="formApi" ng-submit="create(api)" novalidate>
       <md-toolbar>
         <div class="md-toolbar-tools">
@@ -80,4 +81,5 @@
         </md-button>
       </div>
     </form>
+    </md-content>
   </md-dialog>
