--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -55,3 +55,30 @@ $flowRadius: 120px;
 .gravitee-api-save-button {
   display: block;
 }
+
+.content-header {
+    position: relative;
+    padding: 15px 15px 0px;
+}
+
+.content-header > h1 {
+    margin: 0px;
+    font-size: 24px;
+}
+
+.content-header > h1 > small {
+    font-size: 15px;
+    display: inline-block;
+    padding-left: 4px;
+    font-weight: 300;
+}
+
+md-toolbar:not(.md-hue-1),
+.md-fab {
+  fill: #fff;
+}
+
+ng-md-icon {
+  position: relative;
+  top: 5px; // adjust for svg viewbox
+}
