--- a/src/app/documentation/documentation.html
+++ b/src/app/documentation/documentation.html
@@ -15,34 +15,30 @@
     limitations under the License.
 
 -->
-<div flex layout="row">
+<section>
+  <section class="content-header">
+    <h1>
+       Gravitee
+       <small>APIs Documentation</small>
+    </h1>
+	</section>
 
-  <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-z2" md-component-id="left" layout="column">
-    <md-toolbar>
-      <h1 class="md-toolbar-tools">API Documentation</h1>
-    </md-toolbar>
-    <md-list layout="column">
-      <md-select placeholder="Select an APIs..." ng-model="documentationCtrl.selectedApi">
-        <md-select-label>{{ documentationCtrl.selectedApi.name }}</md-select-label>
-        <md-option ng-repeat="api in documentationCtrl.apis" ng-value="api" ng-click="documentationCtrl.selectApi(api, true)">
-          {{api.name}}
-        </md-option>
-      </md-select>
-      <md-list-item ng-repeat="p in documentationCtrl.pages">
-          <md-button ng-click="documentationCtrl.selectPage(p)" ng-class="{'selected' : p === documentationCtrl.selected }">
-            <md-icon class="avatar"></md-icon>
-            {{p.title}}
-          </md-button>
-      </md-list-item>
-    </md-list>
-  </md-sidenav>
+	<md-list layout="column" class="inset">
+    <md-select placeholder="Select an APIs..." ng-model="documentationCtrl.selectedApi">
+      <md-select-label>{{ documentationCtrl.selectedApi.name }}</md-select-label>
+      <md-option ng-repeat="api in documentationCtrl.apis" ng-value="api" ng-click="documentationCtrl.selectApi(api, true)">
+        {{api.name}}
+      </md-option>
+    </md-select>
+    <md-list-item ng-repeat="p in documentationCtrl.pages">
+      <md-button ng-click="documentationCtrl.selectPage(p)" ng-class="{'selected' : p === documentationCtrl.selected }">
+      	<md-icon class="avatar"></md-icon>
+      	{{p.title}}
+      </md-button>
+    </md-list-item>
+  </md-list>
 
   <md-content flex id="content">
-    <md-toolbar>
-      <section ng-if="documentationCtrl.selectedApi" flex="" layout="row" layout-align="left center">
-        <md-button class="md-primary" ng-click="documentationCtrl.showNewPageDialog($event)">New</md-button>
-      </section>
-    </md-toolbar>
     
     <div style="padding:0 20px;">
       <h2>{{documentationCtrl.selected.title}}</h2>
@@ -70,5 +66,7 @@
     </div>
   </md-content>
 
-</div>
-
+   <md-button ng-if="documentationCtrl.selectedApi" class="md-fab md-fab-bottom-right" aria-label="Add" ng-click="documentationCtrl.showNewPageDialog($event)">
+    <ng-md-icon icon="add"></ng-md-icon>
+  </md-button>
+</section>
