--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -15,10 +15,13 @@
     limitations under the License.
 
 -->
-<section class="jumbotron">
-    <h1>Login page</h1>
-
-    <form name="formUser" ng-submit="loginCtrl.login()" class="gravitee-login-container">
+<section>
+  <hg-group style="text-align:center">
+    <h1 style="font-weight: 300; color: #636363;">Login page</h1>
+  </hg-group>
+  <md-card>
+    <md-card-content>
+      <form name="formUser" ng-submit="loginCtrl.login()" class="gravitee-login-container">
         <md-input-container class="md-icon-float">
             <label>Login</label>
             <input ng-model="loginCtrl.user.username" type="text" ng-required="true">
@@ -29,8 +32,10 @@
             <input ng-model="loginCtrl.user.password" type="password" ng-required="true">
         </md-input-container>
 
-        <md-button type="submit" class="md-primary" ng-disabled="formUser.$invalid">
+        <md-button type="submit" class="md-raised md-primary md-button md-ink-ripple" ng-disabled="formUser.$invalid">
             Login
         </md-button>
-    </form>
+      </form>
+    </md-card-content>
+  </md-card>
 </section>
