--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -101,6 +101,10 @@ md-icon {
   flex: 1;
 }
 
+.face {
+  margin: 0px 16px; 
+}
+
 /**
  *  Do not remove this comments bellow. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
