style: refactor api documentation page and set white background for the content app

--- a/src/app/api/apis.html
+++ b/src/app/api/apis.html
@@ -67,7 +67,7 @@
       			</td>
       			<td>
         			<div>
-          			<md-button class="md-raised md-warn" ng-click="apiCtrl.delete(api.name)">Delete</md-button>
+          			<ng-md-icon class="md-raised md-warn" ng-click="apiCtrl.delete(api.name)" icon="delete" size="32" style="fill: red;"></ng-md-icon>
         			</div>
       			</td>
 					</tr>
