--- a/src/app/api/apis_stub.html
+++ b/src/app/api/apis_stub.html
@@ -23,66 +23,102 @@
     </h1>
 	</section>
 	<div layout="row" layout-wrap class="inset">
-		<md-card flex="30">
-		  <md-card-content>
-			  <h2>API 1</h2>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-			</md-card-content>
-			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button ng-href="#/apis/sub">More info >></md-button>
-				<md-button>Action 2</md-button>
-			</div>
-		</md-card>
-		<md-card flex="30">
-		  <md-card-content>
-			  <h2>API 2</h2>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-			</md-card-content>
-			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button ng-href="#/apis/sub">More info >></md-button>
-				<md-button>Action 2</md-button>
-			</div>
-		</md-card>
-		<md-card flex="30">
-		  <md-card-content>
-			  <h2>API 3</h2>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-			</md-card-content>
-			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button ng-href="#/apis/sub">More info >></md-button>
-				<md-button>Action 2</md-button>
-			</div>
-		</md-card>
-		<md-card flex="30">
-		  <md-card-content>
-			  <h2>API 4</h2>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-			</md-card-content>
-			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button ng-href="#/apis/sub">More info >></md-button>
-				<md-button>Action 2</md-button>
-			</div>
-		</md-card>
-		<md-card flex="30">
-		  <md-card-content>
-			  <h2>API 5</h2>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-			</md-card-content>
-			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button ng-href="#/apis/sub">More info >></md-button>
-				<md-button>Action 2</md-button>
-			</div>
-		</md-card>
-		<md-card flex="30">
-		  <md-card-content>
-			  <h2>API 6</h2>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
-			</md-card-content>
-			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button ng-href="#/apis/sub">More info >></md-button>
-				<md-button>Action 2</md-button>
-			</div>
-		</md-card>
+    <div flex="33">
+			<md-card>
+				<div style="background-color: #f39c12; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+					<div>
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+					</div>
+					<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 1</h3>
+				</div>
+				<md-card-content>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+				</md-card-content>
+				<div class="md-actions" layout="row" layout-align="end center">
+					<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+				</div>
+			</md-card>
+    </div>
+		<div flex="33">
+			<md-card>
+				<div style="background-color: #29b6f6; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+					<div>
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+					</div>
+					<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 2</h3>
+				</div>
+				<md-card-content>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+				</md-card-content>
+				<div class="md-actions" layout="row" layout-align="end center">
+					<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+				</div>
+			</md-card>
+		</div>
+		<div flex="33">
+			<md-card>
+				<div style="background-color: #26c6da; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+					<div>
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+					</div>
+					<h3 style="color: white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 3</h3>
+				</div>
+				<md-card-content>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+				</md-card-content>
+				<div class="md-actions" layout="row" layout-align="end center">
+					<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+				</div>
+			</md-card>
+		</div>
+		<div flex="33">
+			<md-card>
+				<div style="background-color: #26a69a; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+					<div>
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+					</div>
+					<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 4</h3>
+				</div>
+				<md-card-content>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+				</md-card-content>
+				<div class="md-actions" layout="row" layout-align="end center">
+					<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+				</div>
+			</md-card>
+		</div>
+		<div flex="33">
+			<md-card>
+				<div style="background-color: #259b24; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+					<div>
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+					</div>
+					<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 5</h3>
+				</div>
+				<md-card-content>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+				</md-card-content>
+				<div class="md-actions" layout="row" layout-align="end center">
+					<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+				</div>
+			</md-card>
+		</div>
+		<div flex="33">
+			<md-card>
+				<div style="background-color: #8bc34a; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+					<div>
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+					</div>
+					<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 6</h3>
+				</div>
+				<md-card-content>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+				</md-card-content>
+				<div class="md-actions" layout="row" layout-align="end center">
+					<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+				</div>
+			</md-card>
+		</div>
 	</div>
 	<div style="text-align:center;">
 		<ul class="pagination">
