--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -31,7 +31,7 @@ html {
 }
 
 md-content.md-default-theme {
-  background-color: #eee;
+  background-color: #fff;
 }
 
 md-content.md-default-theme {
