--- a/src/app/api/api.scss
+++ b/src/app/api/api.scss
@@ -82,3 +82,12 @@ ng-md-icon {
   position: relative;
   top: 5px; // adjust for svg viewbox
 }
+
+.demo-container {
+border-radius: 4px;
+margin-bottom: 16px;
+-webkit-transition: 0.02s padding cubic-bezier(0.35, 0, 0.25, 1);
+transition: 0.02s padding cubic-bezier(0.35, 0, 0.25, 1);
+position: relative;
+padding-bottom: 0;
+}
