--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -26,7 +26,7 @@
 	<md-card>
 		<md-card-content>
 			<md-tabs md-dynamic-height md-border-bottom>
-		    <md-tab label="summary">
+		    <md-tab label="dashboard">
 		      <md-content class="md-padding">
 		        <h1 class="md-display-1">API Stub</h1>
 						<md-divider></md-divider>
@@ -35,29 +35,168 @@
 							<md-card-content>
 								<h5>Reports</h5>
 								<md-divider></md-divider>
-								<div class="chart">
-									<!-- Sales Chart Canvas -->
-									<canvas id="line" class="chart chart-line" chart-data="data"
-											chart-labels="labels" chart-legend="true" chart-series="series"
-											chart-click="onClick" >
-									</canvas>
-								</div><!-- /.chart-responsive -->
+								<div class="column">
+									<div class="chart" layout="row" flex>
+										<div flex="70">
+											<canvas id="line" class="chart chart-line" chart-data="data"
+													chart-labels="labels" chart-legend="true" chart-series="series"
+													chart-click="onClick" >
+											</canvas>
+										</div>
+										<div flex="30">
+											<canvas id="pie" class="chart chart-pie"
+											  chart-data="dataPie" chart-labels="labelsPie" chart-legend="true">
+											</canvas>
+										</div>
+									</div>
+									<div class="chart" layout="row" flex>
+										<div flex="33">
+											<canvas id="radar" class="chart chart-radar"
+											  chart-data="data" chart-labels="labels">
+											</canvas> 
+										</div>
+										<div flex="33">
+											<canvas id="polar-area" class="chart chart-polar-area"
+											  chart-data="dataPie" chart-labels="labelsPie">
+											</canvas> 
+										</div>
+										<div flex="33">
+											<canvas id="doughnut" class="chart chart-doughnut"
+											  chart-data="dataPie" chart-labels="labelsPie">
+											</canvas> 
+										</div>
+									</div>
+								</div>
 							</md-card-content>
 						</md-card>
 		      </md-content>
 		    </md-tab>
-		    <md-tab label="policies">
-		      <md-content class="md-padding">
-		        <h1 class="md-display-1">Policies</h1>
-		        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi. Aliquam erat volutpat. Nam placerat, tortor in ultrices porttitor, orci enim rutrum enim, vel tempor sapien arcu a tellus. Vivamus convallis sodales ante varius gravida. Curabitur a purus vel augue ultrices ultricies id a nisl. Nullam malesuada consequat diam, a facilisis tortor volutpat et. Sed urna dolor, aliquet vitae posuere vulputate, euismod ac lorem. Sed felis risus, pulvinar at interdum quis, vehicula sed odio. Phasellus in enim venenatis, iaculis tortor eu, bibendum ante. Donec ac tellus dictum neque volutpat blandit. Praesent efficitur faucibus risus, ac auctor purus porttitor vitae. Phasellus ornare dui nec orci posuere, nec luctus mauris semper.</p>
-		        <p>Morbi viverra, ante vel aliquet tincidunt, leo dolor pharetra quam, at semper massa orci nec magna. Donec posuere nec sapien sed laoreet. Etiam cursus nunc in condimentum facilisis. Etiam in tempor tortor. Vivamus faucibus egestas enim, at convallis diam pulvinar vel. Cras ac orci eget nisi maximus cursus. Nunc urna libero, viverra sit amet nisl at, hendrerit tempor turpis. Maecenas facilisis convallis mi vel tempor. Nullam vitae nunc leo. Cras sed nisl consectetur, rhoncus sapien sit amet, tempus sapien.</p>
-		        <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo lectus.</p>
-		      </md-content>
-		    </md-tab>
-		    <md-tab label="documentation">
-		      <md-content class="md-padding">
-		        <h1 class="md-display-1">Documentation</h1>
-		        <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo lectus.</p>
+		     <md-tab label="documentation">
+		      <md-content>
+						<div layout="row">
+							<md-list layout="column" class="inset" flex="20">
+								<md-button class="md-fab md-mini md-primary" aria-label="Add" ng-click="apiCtrl.addDocumentation()">
+									<ng-md-icon icon="add"></ng-md-icon>
+								</md-button>
+								<md-divider></md-divider>
+								<md-item>
+						       <a href="#" style="color: #666;">
+						         <md-item-content md-ink-ripple layout="row" layout-align="start center">
+						           <div class="inset">
+						             <ng-md-icon icon="insert_drive_file"></ng-md-icon>
+						           </div>
+						           <div class="inset">Page 1</div>
+						         </md-item-content>
+						      </a>
+						    </md-item>
+								<md-item>
+						       <a href="#" style="color: #666;">
+						         <md-item-content md-ink-ripple layout="row" layout-align="start center">
+						           <div class="inset">
+						             <ng-md-icon icon="insert_drive_file"></ng-md-icon>
+						           </div>
+						           <div class="inset">Page 2</div>
+						         </md-item-content>
+						      </a>
+						    </md-item>
+								<md-item>
+						       <a href="#" style="color: #666;">
+						         <md-item-content md-ink-ripple layout="row" layout-align="start center">
+						           <div class="inset">
+						             <ng-md-icon icon="insert_drive_file"></ng-md-icon>
+						           </div>
+						           <div class="inset">Page 3</div>
+						         </md-item-content>
+						      </a>
+						    </md-item>
+							</md-list>
+							<md-content flex="80">
+								<md-card style="box-shadow:none;">
+									<div style="border: 1px solid #e7eaec; border-bottom: 0; padding: 30px 20px 20px;">
+										<div layout="column">
+											<h3 style="color: #676a6c; clear:both;">Page 1</h3>
+											<div class="documentation-tool-bar">
+												<md-button class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Edit"><ng-md-icon icon="mode_edit" size="16"></ng-md-icon></md-button>
+												<md-button class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Delete"><ng-md-icon icon="delete" size="16"></ng-md-icon></md-button>
+											</div>
+										</div>
+									</div>
+									<md-card-content style="background-color: #fff; border: 1px solid #e7eaec">
+										<p btf-markdown>
+											DBY with Spec and Config Files
+==================================
+
+Protractor needs two files to run, the test or spec file, and the configuration file.
+
+Spec files
+==========
+
+Protractor tests  are written using the syntax of your test framework, for example [Jasmine](http://jasmine.github.io/), and the [Protractor API](/docs/api.md).
+
+Example Spec File
+-----------------
+This simple script ([example_spec.js](/example/example_spec.js)) tests the 'The Basics' example on the [angularjs.org](http://www.angularjs.org) homepage.
+
+Global Variables
+----------------
+
+Protractor exports these global variables to your spec (test) file:
+
+ - `browser` - A wrapper around an instance of WebDriver, used for navigation and page-wide information. The `browser.get` method loads a page. Protractor expects Angular to be present on a page, so it will throw an error if the page it is attempting to load does not contain the Angular library. (If you need to interact with a non-Angular page, you may access the wrapped webdriver instance directly with `browser.driver`).
+
+ - `element` - A helper function for finding and interacting with DOM elements on the page you are testing. The `element` function searches for an element on the page. It requires one parameter, a locator strategy for locating the element. See [Using Locators](/docs/locators.md) for more information. See Protractor's findelements test suite ([elements_spec.js](/spec/basic/elements_spec.js)) for more examples.
+
+ - `by` - A collection of element locator strategies. For example, elements can be found by CSS selector, by ID, or by the attribute they are bound to with ng-model. See [Using Locators](/docs/locators.md).
+
+ - `protractor` - The Protractor namespace which wraps the WebDriver namespace. Contains static variables and classes, such as `protractor.Key` which enumerates the codes for special keyboard signals.
+
+
+Config Files
+============
+
+The configuration file tells Protractor how to set up the Selenium Server, which tests to run, how to set up the browsers, and which test framework to use. The configuration file can also include one or more global settings.
+
+Example Config File
+-------------------
+
+A simple configuration ([conf.js](https://github.com/angular/protractor/tree/master/example)) is shown below.
+```js
+// An example configuration file
+exports.config = {
+  // The address of a running selenium server.
+  seleniumAddress: 'http://localhost:4444/wd/hub',
+
+  // Capabilities to be passed to the webdriver instance.
+  capabilities: {
+    'browserName': 'chrome'
+  },
+
+  // Spec patterns are relative to the configuration file location passed
+  // to protractor (in this example conf.js).
+  // They may include glob patterns.
+  specs: ['example-spec.js'],
+
+  // Options to be passed to Jasmine-node.
+  jasmineNodeOpts: {
+    showColors: true, // Use colors in the command line report.
+  }
+};
+```
+
+Reference Config File
+---------------------
+
+The [reference config file](/docs/referenceConf.js) file provides explanations for all of the Protractor configuration options. Default settings include the standalone Selenium Server, the Chrome browser, and the Jasmine test framework. Additional information about various configuration options is available here:
+
+ - [Setting Up the Selenium Server](/docs/server-setup.md)
+ - [Setting Up the Browser](/docs/browser-setup.md)
+ - [Choosing a Framework](/docs/frameworks.md)
+ - [Using Page Objects to Organize Tests](/docs/page-objects.md)
+										</p>
+									</md-card-content>
+								</md-card>
+							</md-content>
+						</div>
 		      </md-content>
 		    </md-tab>
 				<md-tab label="settings">
