--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -73,130 +73,59 @@
 		    </md-tab>
 		     <md-tab label="documentation">
 		      <md-content>
-						<div layout="row">
-							<md-list layout="column" class="inset" flex="20">
-								<md-button class="md-fab md-mini md-primary" aria-label="Add" ng-click="apiCtrl.addDocumentation()">
-									<ng-md-icon icon="add"></ng-md-icon>
-								</md-button>
-								<md-divider></md-divider>
-								<md-item>
-						       <a href="#" style="color: #666;">
-						         <md-item-content md-ink-ripple layout="row" layout-align="start center">
-						           <div class="inset">
-						             <ng-md-icon icon="insert_drive_file"></ng-md-icon>
-						           </div>
-						           <div class="inset">Page 1</div>
-						         </md-item-content>
-						      </a>
-						    </md-item>
-								<md-item>
-						       <a href="#" style="color: #666;">
-						         <md-item-content md-ink-ripple layout="row" layout-align="start center">
-						           <div class="inset">
-						             <ng-md-icon icon="insert_drive_file"></ng-md-icon>
-						           </div>
-						           <div class="inset">Page 2</div>
-						         </md-item-content>
-						      </a>
-						    </md-item>
-								<md-item>
-						       <a href="#" style="color: #666;">
-						         <md-item-content md-ink-ripple layout="row" layout-align="start center">
-						           <div class="inset">
-						             <ng-md-icon icon="insert_drive_file"></ng-md-icon>
-						           </div>
-						           <div class="inset">Page 3</div>
-						         </md-item-content>
-						      </a>
-						    </md-item>
-							</md-list>
-							<md-content flex="80">
-								<md-card style="box-shadow:none;">
-									<div style="border: 1px solid #e7eaec; border-bottom: 0; padding: 30px 20px 20px;">
-										<div layout="column">
-											<h3 style="color: #676a6c; clear:both;">Page 1</h3>
-											<div class="documentation-tool-bar">
-												<md-button class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Edit"><ng-md-icon icon="mode_edit" size="16"></ng-md-icon></md-button>
-												<md-button class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Delete"><ng-md-icon icon="delete" size="16"></ng-md-icon></md-button>
-											</div>
-										</div>
+				<div layout="row" ng-controller="DocumentationController as documentationCtrl">
+
+					<md-list layout="column" class="inset" flex="20">
+						<md-button class="md-fab md-mini md-primary" aria-label="Add" ng-click="documentationCtrl.showNewPageDialog()">
+							<ng-md-icon icon="add"></ng-md-icon>
+						</md-button>
+						<md-divider></md-divider>
+						<md-item ng-repeat="p in documentationCtrl.pages">
+					   <a href="#" style="color: #666;">
+						 <md-item-content md-ink-ripple layout="row" layout-align="start center">
+						   <div class="inset">
+							 <ng-md-icon icon="insert_drive_file"></ng-md-icon>
+						   </div>
+							 <md-button class="inset" ng-click="documentationCtrl.selectPage(p)" ng-class="{'selected' : p === documentationCtrl.selected }">
+								 {{p.title}}
+							 </md-button>
+						 </md-item-content>
+					  </a>
+					</md-item>
+					</md-list>
+					<md-content flex="80">
+						<md-card style="box-shadow:none;">
+							<div style="border: 1px solid #e7eaec; border-bottom: 0; padding: 30px 20px 20px;">
+								<div layout="column">
+									<h3 style="color: #676a6c; clear:both;">{{documentationCtrl.selected.title}}</h3>
+									<div class="documentation-tool-bar">
+										<md-button ng-click="documentationCtrl.edit()" class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Edit"><ng-md-icon icon="mode_edit" size="16"></ng-md-icon></md-button>
+										<md-button ng-click="documentationCtrl.deletePage()" class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Delete"><ng-md-icon icon="delete" size="16"></ng-md-icon></md-button>
 									</div>
-									<md-card-content style="background-color: #fff; border: 1px solid #e7eaec">
-										<p btf-markdown>
-											DBY with Spec and Config Files
-==================================
+								</div>
+							</div>
+							<md-card-content style="background-color: #fff; border: 1px solid #e7eaec">
 
-Protractor needs two files to run, the test or spec file, and the configuration file.
+								<div ng-show="!documentationCtrl.editMode">
+									<div ng-if="documentationCtrl.markdownType()" btf-markdown="documentationCtrl.selected.content">
+									</div>
 
-Spec files
-==========
+									<raml-console ng-if="documentationCtrl.ramlType()" src="{{documentationCtrl.getContentUrl()}}"
+												  disable-title disable-theme-switcher disable-raml-client-generator>
+									</raml-console>
 
-Protractor tests  are written using the syntax of your test framework, for example [Jasmine](http://jasmine.github.io/), and the [Protractor API](/docs/api.md).
+									<div ng-if="documentationCtrl.swaggerType()" swagger-ui url="documentationCtrl.getContentUrl()" api-explorer="true">
+									</div>
+								</div>
 
-Example Spec File
------------------
-This simple script ([example_spec.js](/example/example_spec.js)) tests the 'The Basics' example on the [angularjs.org](http://www.angularjs.org) homepage.
-
-Global Variables
-----------------
-
-Protractor exports these global variables to your spec (test) file:
-
- - `browser` - A wrapper around an instance of WebDriver, used for navigation and page-wide information. The `browser.get` method loads a page. Protractor expects Angular to be present on a page, so it will throw an error if the page it is attempting to load does not contain the Angular library. (If you need to interact with a non-Angular page, you may access the wrapped webdriver instance directly with `browser.driver`).
-
- - `element` - A helper function for finding and interacting with DOM elements on the page you are testing. The `element` function searches for an element on the page. It requires one parameter, a locator strategy for locating the element. See [Using Locators](/docs/locators.md) for more information. See Protractor's findelements test suite ([elements_spec.js](/spec/basic/elements_spec.js)) for more examples.
-
- - `by` - A collection of element locator strategies. For example, elements can be found by CSS selector, by ID, or by the attribute they are bound to with ng-model. See [Using Locators](/docs/locators.md).
-
- - `protractor` - The Protractor namespace which wraps the WebDriver namespace. Contains static variables and classes, such as `protractor.Key` which enumerates the codes for special keyboard signals.
-
-
-Config Files
-============
-
-The configuration file tells Protractor how to set up the Selenium Server, which tests to run, how to set up the browsers, and which test framework to use. The configuration file can also include one or more global settings.
-
-Example Config File
--------------------
-
-A simple configuration ([conf.js](https://github.com/angular/protractor/tree/master/example)) is shown below.
-```js
-// An example configuration file
-exports.config = {
-  // The address of a running selenium server.
-  seleniumAddress: 'http://localhost:4444/wd/hub',
-
-  // Capabilities to be passed to the webdriver instance.
-  capabilities: {
-    'browserName': 'chrome'
-  },
-
-  // Spec patterns are relative to the configuration file location passed
-  // to protractor (in this example conf.js).
-  // They may include glob patterns.
-  specs: ['example-spec.js'],
-
-  // Options to be passed to Jasmine-node.
-  jasmineNodeOpts: {
-    showColors: true, // Use colors in the command line report.
-  }
-};
-```
-
-Reference Config File
----------------------
-
-The [reference config file](/docs/referenceConf.js) file provides explanations for all of the Protractor configuration options. Default settings include the standalone Selenium Server, the Chrome browser, and the Jasmine test framework. Additional information about various configuration options is available here:
-
- - [Setting Up the Selenium Server](/docs/server-setup.md)
- - [Setting Up the Browser](/docs/browser-setup.md)
- - [Choosing a Framework](/docs/frameworks.md)
- - [Using Page Objects to Organize Tests](/docs/page-objects.md)
-										</p>
-									</md-card-content>
-								</md-card>
-							</md-content>
-						</div>
+								<div ng-show="documentationCtrl.editMode">
+									<textarea ng-model="documentationCtrl.selected.content" cols="190" rows="37">{{documentationCtrl.selected.content}}</textarea>
+									<md-button ng-click="documentationCtrl.editPage()" class="md-icon-button" style="border: 1px solid #E7EAEC;" aria-label="Save"><ng-md-icon icon="save" size="16"></ng-md-icon></md-button>
+								</div>
+							</md-card-content>
+						</md-card>
+					</md-content>
+				</div>
 		      </md-content>
 		    </md-tab>
 				<md-tab label="settings">
