--- a/src/app/api/apis.html
+++ b/src/app/api/apis.html
@@ -38,7 +38,7 @@
         <tbody>
 					<tr>
 				    <td><a ng-href="#/apis/stub">API Stub name</a></td>
-				    <td>is Public</td>
+				    <td>/api_stubs</td>
 				    <td>http://api/api_stub/v1</td>
 				    <td>STARTED</td>
 				    <td>
