feat(profile): add header

--- a/src/app/profile/profile_stub.html
+++ b/src/app/profile/profile_stub.html
@@ -16,6 +16,12 @@
 
 -->
 <section>
+  <section class="content-header">
+    <h1>
+       Gravitee
+       <small>Profile Management (Stub version)</small>
+    </h1>
+  </section>  
   <div layout="row" layout-wrap>
   	<div flex="30">
   	  <md-card>
