feat(application): add default files for application part (controller + view + css)

--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -132,7 +132,7 @@
 		        <h1 class="md-display-1">Settings</h1>
 		       	<md-card>
 							<md-card-content>
-								    <form name="formApi" class="gravitee-api-container" ng-submit="apiCtrl.update(apiCtrl.api)" novalidate>
+								    <form name="formApi" class="md-inline-form" ng-submit="apiCtrl.update(apiCtrl.api)" novalidate>
 
         <div layout="" layout-sm="column">
             <md-input-container class="flex md-icon-float">
