feat(application) : add detail application page + change default theme

--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -71,6 +71,11 @@
 						</md-card>
 		      </md-content>
 		    </md-tab>
+				<md-tab label="policies">
+					<md-content>
+					
+					</md-content>
+				</md-tab>
 		     <md-tab label="documentation">
 		      <md-content>
 				<div layout="row" ng-controller="DocumentationController as documentationCtrl">
