--- a/src/app/application/applications.html
+++ b/src/app/application/applications.html
@@ -25,6 +25,39 @@
 
     <md-card>
       <md-card-content>
+				<table class="table">
+					<thead>
+						<tr>
+							<th>Name</th>
+							<th>Visibility</th>
+							<th>APIs</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td><a href="#/applications/application-1">Application 1</a></td>
+							<td>
+								<md-chips>
+									<md-chip>administrators</md-chip>
+									<md-chip>developers</md-chip>
+									<md-chip>guests</md-chip>
+								</md-chips>
+							</td>
+							<td><md-chips><md-chip>2</md-chip></md-chips></td>
+						</tr>
+						<tr>
+							<td><a href="#/applications/application-2">Application 2</a></td>
+							<td>
+								<md-chips>
+									<md-chip>administrators</md-chip>
+									<md-chip>developers</md-chip>
+									<md-chip>guests</md-chip>
+								</md-chips>
+							</td>
+							<td><md-chips><md-chip>3</md-chip></md-chips></td>
+						</tr>
+					</tbody>
+				</table>
       </md-card-content>
     </md-card>
   </section>
