feat(api) : start api policies tab

--- a/src/app/api/api_stub.html
+++ b/src/app/api/api_stub.html
@@ -73,7 +73,53 @@
 		    </md-tab>
 				<md-tab label="policies">
 					<md-content>
-					
+						<div layout="row">
+							<div flex="30">
+								<md-card>
+									<div class="inset">
+										<h5>Policies</h5>
+										<md-divider></md-divider>																
+									</div>
+									<md-card-content>
+										<md-list>
+											<md-list-item class="md-2-line">
+												<div class="md-list-item-text">
+													<h3>Basic Authentication</h3>
+												</div>
+											</md-list-item>
+											<md-list-item class="md-2-line">
+												<div class="md-list-item-text">
+													<h3>API Key Authentication</h3>
+												</div>
+											</md-list-item>
+											<md-list-item class="md-2-line">
+												<div class="md-list-item-text">
+													<h3>CORS</h3>
+												</div>
+											</md-list-item>
+											<md-list-item class="md-2-line">
+												<div class="md-list-item-text">
+													<h3>Rate limit</h3>
+												</div>
+											</md-list-item>
+										</md-list>
+									</md-card-content>
+								</md-card>
+							</div>
+							<div flex="70">
+								<md-card>
+									<div class="inset">
+										<h5>API Policies</h5>
+										<md-divider></md-divider>																
+									</div>
+									<md-card-content>
+										<div style="background-color: #eee; min-height:450px; text-align:center">
+											<span style="vertical-align:middle;"><ng-md-icon icon="add"></ng-md-icon>DROP POLICY</span>
+										</div>
+									</md-card-content>
+								</md-card>
+							</div>
+						</div>
 					</md-content>
 				</md-tab>
 		     <md-tab label="documentation">
