--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -31,7 +31,7 @@ html {
 }
 
 md-content.md-default-theme {
-  background-color: #fff;
+  background-color: #fafafa;
 }
 
 md-content.md-default-theme {
