--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -15,17 +15,116 @@
     limitations under the License.
 
 -->
-<section>
-	 <md-card>
-     <md-card-content style="text-align:center;">
-		   <h3>Gravitee Administration Console</h3>
-			 <md-divider></md-divider>
-  		 <p class="lead inset">
-    	   <img class="gravitee-logo" src="assets/images/logo_gravitee.png" alt="Gravitee"><br>
-  	   </p>
-       <md-button ng-if="!authenticated" class="md-raised animated infinite" ng-class="mainCtrl.classAnimation" ng-href="#login">
-         Login
-        </md-button>
-		 </md-card-content>
-   </md-card>
+<section layout="column">
+	<md-content>
+	  <section class="landing-header">
+			<img src="http://i.muskratmike.com/1638510.jpg" style="margin-top: -350px; max-width: 100%;  height: auto;">
+			<section class="landing-header-content" layout-padding style="text-align:center;">
+				<ul>
+					<li><a href="#/apis">Check out APIs <ng-md-icon icon="dashboard" style="fill:#08c;"></ng-md-icon></a></li>
+					<li><a href="#">Create your Application <ng-md-icon icon="my_library_add" style="fill:#08c;"></ng-md-icon></a></li>
+					<li><a href="#/static/documentation">Learn More <ng-md-icon icon="find_in_page" style="fill:#08c"></ng-md-icon></a></li>
+				</ul>
+			</section>
+			<section id="apis" layout-padding>
+				<md-divider></md-divider>
+				<div style="text-align:center"><h3>APIs</h3></div>
+				<div layout="row" layout-wrap class="inset">
+					<div flex="33">
+						<md-card>
+							<div style="background-color: #f39c12; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+								<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+								<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 1</h3>
+							</div>
+							<md-card-content>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+							</md-card-content>
+							<div class="md-actions" layout="row" layout-align="end center">
+								<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+							</div>
+					</md-card>
+    		</div>
+				<div flex="33">
+					<md-card>
+						<div style="background-color: #29b6f6; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+							<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+							<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 2</h3>
+						</div>
+						<md-card-content>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+						</md-card-content>
+					<div class="md-actions" layout="row" layout-align="end center">
+						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+					</div>
+				</md-card>
+			</div>
+			<div flex="33">
+				<md-card>
+					<div style="background-color: #26c6da; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+						<h3 style="color: white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 3</h3>
+					</div>
+					<md-card-content>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+					</md-card-content>
+					<div class="md-actions" layout="row" layout-align="end center">
+						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+					</div>
+				</md-card>
+			</div>
+			<div flex="33">
+				<md-card>
+					<div style="background-color: #26a69a; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+						<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 4</h3>
+					</div>
+					<md-card-content>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+					</md-card-content>
+					<div class="md-actions" layout="row" layout-align="end center">
+						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+					</div>
+				</md-card>
+			</div>
+			<div flex="33">
+				<md-card>
+					<div style="background-color: #259b24; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+						<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 5</h3>
+					</div>
+					<md-card-content>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+					</md-card-content>
+					<div class="md-actions" layout="row" layout-align="end center">
+						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+					</div>
+				</md-card>
+			</div>
+			<div flex="33">
+				<md-card>
+					<div style="background-color: #8bc34a; padding: 20px; border-top-right-radius: 3px; border-top-left-radius: 3px;">
+						<ng-md-icon icon="track_changes" size="64" style="fill: white; float:left;"></ng-md-icon>
+						<h3 style="color:white; margin-left:75px; margin-top: 20px; margin-bottom: 5px;">API 6</h3>
+					</div>
+					<md-card-content>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+					</md-card-content>
+					<div class="md-actions" layout="row" layout-align="end center">
+						<md-button ng-href="#/apis/sub"><ng-md-icon icon="more_horiz" size="36" style="fill: #696969;"></ng-md-icon></md-button>
+					</div>
+				</md-card>
+			</div>
+		</div>
+		<div style="text-align:center;">
+			<ul class="pagination">
+				<li><a href="#">1</a></li>
+				<li><a href="#">2</a></li>
+				<li><a href="#">3</a></li>
+				<li><a href="#">4</a></li>
+				<li><a href="#">5</a></li>
+			</ul>
+		</div>
+	</section>
+ </section>
+</md-content>
 </section>
